[package]
name = "galileo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Penumbra dependencies
# TODO: sort out git-lfs dependency so we can fetch git deps again; GH29.
penumbra-proto = { path = "../penumbra/proto" }
penumbra-crypto = { path = "../penumbra/crypto" }
penumbra-custody = { path = "../penumbra/custody" }
penumbra-wallet = { path = "../penumbra/wallet" }
penumbra-view = { path = "../penumbra/view" }
penumbra-transaction = { path = "../penumbra/transaction" }

# External dependencies
ark-ff = "0.3"
ark-serialize = "0.3"
anyhow = "1"
directories = "4.0.1"
regex = "1"
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "cache",
    "gateway",
    "rustls_backend",
    "model",
    "utils",
] }
sqlx = { version = "0.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "offline",
] }
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1.25", features = ["full"] }
humantime = "2"
clap = { version = "3", features = ["derive"] }
serde_json = "1"
tonic = "0.6"
futures = "0.3"
derivative = "2"
fslock = "0.2"
rand = "0.8"
reqwest = "0.11"
indexmap = "1.8"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = "1"
csv-stream = "0.1"

# External dependencies
tendermint-config = "0.24.0-pre.1"
# These are = dependencies to force the whole workspace's dependency tree to go
# back onto 0.24.0-pre.1, which, unlike 0.24.0-pre.2, doesn't have
# ecosystem-incompatible breaking changes to the prost version.
#
# Longer-term, we can't rely on the upstream to publish versions, so we should plan
# to fork the crates and maintain our fork.
tendermint-proto = "=0.24.0-pre.1"
tendermint = "=0.24.0-pre.1"
# We don't need this crate at all, but its upstream published a breaking change as
# 0.7.1 (also prost-related), and depending on an exact version here will exclude
# the bad update until it's yanked.
ics23 = "=0.7.0"
