[package]
name = "galileo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# TODO: this is way too complicated, the features in the penumbra crates need to be fixed
default = ["parallel"]
parallel = ["penumbra-wallet/parallel"]

[dependencies]
# Penumbra dependencies
penumbra-asset                         = { path = "../penumbra/crates/core/asset" }
penumbra-custody                       = { path = "../penumbra/crates/custody" }
penumbra-fee                           = { path = "../penumbra/crates/core/component/fee" }
penumbra-keys                          = { path = "../penumbra/crates/core/keys" }
penumbra-proto                         = { path = "../penumbra/crates/proto", features = ["rpc", "box-grpc"] }
penumbra-transaction                   = { path = "../penumbra/crates/core/transaction", features = ["download-proving-keys"] }
penumbra-txhash                        = { path = "../penumbra/crates/core/txhash" }
penumbra-view                          = { path = "../penumbra/crates/view" }
penumbra-wallet                        = { path = "../penumbra/crates/wallet" }

# External dependencies
anyhow                                 = "1"
camino                                 = "1"
directories                            = "4.0.1"
regex                                  = "1"
pin-project-lite                       = "0.2.7"
async-stream                           = "0.3"
chrono                                 = { version = "0.4", features = ["serde"] }
clap                                   = { version = "3", features = ["derive"] }
csv                                    = "1.2"
derivative                             = "2"
futures                                = "0.3"
futures-util                           = { version = "0.3", default-features = false, features = ["alloc"] }
humantime                              = "2"
indexmap                               = "1.8"
num-traits                             = "0.2"
rand                                   = "0.8"
reqwest                                = "0.11"
serde                                  = "1"
serde_json                             = "1"
tokio                                  = { version = "1.25", features = ["full"] }
toml                                   = "0.7"
tonic                                  = { version = "0.10", features = ["tls-webpki-roots", "tls"] }
tower                                  = { version = "0.4", features = ["balance"] }
tower-service                          = { version = "0.3.1" }
tracing                                = "0.1"
tracing-subscriber                     = "0.2"
url                                    = "2"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "utils",
]
