[package]
name = "galileo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this is way too complicated, the features in the penumbra crates need to be fixed
[features]
default = ["parallel"]
parallel = ["penumbra-wallet/parallel"]

[dependencies]
# Penumbra dependencies
penumbra-proto = { path = "../penumbra/crates/proto", features = ["rpc", "box-grpc"] }
penumbra-asset = { path = "../penumbra/crates/core/asset" }
penumbra-fee = { path = "../penumbra/crates/core/component/fee" }
penumbra-keys = { path = "../penumbra/crates/core/keys" }
penumbra-custody = { path = "../penumbra/crates/custody" }
penumbra-wallet = { path = "../penumbra/crates/wallet" }
penumbra-view = { path = "../penumbra/crates/view" }
penumbra-transaction = { path = "../penumbra/crates/core/transaction", features = [
    "download-proving-keys",
] }
penumbra-txhash = { path = "../penumbra/crates/core/txhash" }

# External dependencies
tower = { version = "0.4", features = ["balance"] }
tower-service = { version = "0.3.1" }
anyhow = "1"
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
] }
camino = "1"
directories = "4.0.1"
regex = "1"
pin-project-lite = "0.2.7"
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "cache",
    "gateway",
    "rustls_backend",
    "model",
    "utils",
] }
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1.25", features = ["full"] }
humantime = "2"
clap = { version = "3", features = ["derive"] }
serde_json = "1"
futures = "0.3"
derivative = "2"
rand = "0.8"
reqwest = "0.11"
indexmap = "1.8"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = "1"
csv = "1.2"
url = "2"
num-traits = "0.2"
tonic = { version = "0.10", features = ["tls-webpki-roots", "tls"] }
toml = "0.7"
